--- a/scss/styles/Modals/CreateCollectionModal.module.scss
+++ b/scss/styles/Modals/CreateCollectionModal.module.scss
@@ -318,6 +318,27 @@
   }
 }
 
+// Locked state for brand selection
+.selectButton.locked {
+  cursor: not-allowed;
+  background: rgba(255, 255, 255, 0.03);
+  border-color: rgba(255, 255, 255, 0.08);
+
+  .light & {
+    background: rgba(0, 0, 0, 0.02);
+    border-color: rgba(0, 0, 0, 0.08);
+  }
+}
+
+.lockIcon {
+  color: rgba(255, 255, 255, 0.4);
+  font-size: 16px !important;
+
+  .light & {
+    color: rgba(0, 0, 0, 0.4);
+  }
+}
+
 .dropdown {
   position: absolute;
   top: calc(100% + 4px);
