--- a/scss/styles/HomePage/HomeMiddle.module.scss
+++ b/scss/styles/HomePage/HomeMiddle.module.scss
@@ -146,7 +146,7 @@
 .stepContent {
   position: relative;
   flex: 1;
-  overflow: hidden;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
